--- a/index.html
+++ b/index.html
@@ -52,38 +52,39 @@
         </div>
     </header>
     <!--RESPONSIVE HEADER END-->
-<main>
-    <!--HERO SECTION START-->
-    <section class="section-full background-mask flex flex-center">
-        <div class="container container-mobile flex flex-center--y flex-column-mobile text-center-mobile">
-            <div class="column-2 column-2-mobile">
-                <h1><span>NEW</span> to 3D Printing?</h1>
-                <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
-                <div class="button-wrapper">
-                    <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
-                        aria-label="this links to the basics page" rel="noopener" target="_blank">
-                        GET STARTED!
-                    </a>
+    <main>
+        <!--HERO SECTION START-->
+        <section class="section-full background-mask flex flex-center">
+            <div class="container container-mobile flex flex-center--y flex-column-mobile text-center-mobile">
+                <div class="column-2 column-2-mobile">
+                    <h1><span>NEW</span> to 3D Printing?</h1>
+                    <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
+                    <div class="button-wrapper">
+                        <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                            aria-label="this links to the basics page" rel="noopener" target="_blank">
+                            GET STARTED!
+                        </a>
+                    </div>
+                </div>
+                <div class="column-2 column-2-mobile flex flex-end">
+                    <img src="assets/img/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
                 </div>
             </div>
-            <div class="column-2 column-2-mobile flex flex-end">
-                <img src="assets/img/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
-            </div>
-        </div>
-    </section>
-    <!--HERO SECTION END-->
+        </section>
+        <!--HERO SECTION END-->
 
-    <!--ABOUT SECTION START-->
-    <section class="section-full background-reverse flex flex-center flex-column flex-between text-center-mobile">
-        <img class="flip-x divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile">
-            <div class="column-2 column-2-mobile flex-column-mobile text-white text-shadow flex-order-mobile">
-                <h2><span>3D</span>Printing resources for you!</h2>
-                <p class="margin-top--s">Discover how we can help you with getting on track in your 3D printing journey!
-                    We start easy and over time we will get into the nitty gritty stuff. Promised!
-                </p>
-            </div>
-            <div class="column-2 column-2-mobile flex flex-end align-center-mobile">
+        <!--ABOUT SECTION START-->
+        <section class="section-full background-reverse flex flex-center flex-column flex-between text-center-mobile">
+            <img class="flip-x divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
+            <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile">
+                <div class="column-2 column-2-mobile flex-column-mobile text-white text-shadow flex-order-mobile">
+                    <h2><span>3D</span>Printing resources for you!</h2>
+                    <p class="margin-top--s">Discover how we can help you with getting on track in your 3D printing
+                        journey!
+                        We start easy and over time we will get into the nitty gritty stuff. Promised!
+                    </p>
+                </div>
+                <div class="column-2 column-2-mobile flex flex-end align-center-mobile">
                     <div class="grid grid-container grid-container-mobile">
                         <div class="grid-card grid-card__background--basics box-shadow">
                             <h3>BASICS</h3>
@@ -98,69 +99,75 @@
                             <h3>HELP</h3>
                         </div>
                     </div>
-            </div>
-        </div>
-        <img class="divider divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
-    </section>
-    <!--ABOUT SECTION END-->
-
-    <!--TESTIMONIAL SECTION START-->
-    <section class="section-half flex flex-center">
-        <div class="container flex container-mobile flex-center flex-column-mobile text-center-mobile">
-            <div class="column-2 column-2-mobile flex-order-mobile">
-                <h2 class="text-shadow"><span>HOW</span> we help people</h2>
-            </div>
-            <div
-                class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-row flex-column-mobile">
-                <img src="assets/img/testimonial-slider-asian-dude.png" alt="this should be a persons image">
-                <div>
-                    <p class="testimonial-text">"Jeez. This got me up and running for a job interview!"</p>
-                    <p><em>Kaneda Yamagata - CTO MeshBash</em></p>
                 </div>
             </div>
-        </div>
-    </section>
-    <!--TESTIMONIAL SECTION END-->
+            <img class="divider divider-bottom" src="assets/img/shape-divider-bottom.svg"
+                alt="the bottom shape divider">
+        </section>
+        <!--ABOUT SECTION END-->
 
-    <!--CONTACT SECTION START-->
-    <section class="section-full background flex flex-center flex-column flex-between">
-        <img class="divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container container-mobile flex-column-mobile flex text-center-mobile">
-            <div class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order-mobile">
-                <h2><span>GOT</span> questions?</h2>
-                <p class="margin-top--s">Feel free to contact us at any time! We will come back to you as soon as
-                    possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
-            </div>
-            <div class="column-2 column-2-mobile flex flex-end flex-center--x">
-                <form action="https://rebellionwebdesign.github.io/fab-forever/response.html" class="form-wrapper flex flex-column box-shadow">
-                    <h3>Lets stay in contact!</h3>
-                    <label for="fname">Your first name <span class="red-star">*</span></label>
-                    <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
-                    <label for="lname">Your last name <span class="red-star">*</span></label>
-                    <input type="text" id="lname" name="lname" aria-label="Put your last name in here" required>
-                    <label for="email">Your eMail address <span class="red-star">*</span></label>
-                    <input type="email" id="email" name="email" aria-label="Put your email address in here" required>
-                    <div class="legal-wrapper">
-                        <p class="legal-text">with <span class="red-star">*</span> marked fields are mandatory</p>
-                        <input type="checkbox" id="newsletter" name="newsletter">
-                        <label class="newsletter" for="newsletter">I also want the newsletter!</label>
+        <!--TESTIMONIAL SECTION START-->
+        <section class="section-half flex flex-center">
+            <div class="container flex container-mobile flex-center flex-column-mobile text-center-mobile">
+                <div class="column-2 column-2-mobile flex-order-mobile">
+                    <h2 class="text-shadow"><span>HOW</span> we help people</h2>
+                </div>
+                <div
+                    class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-row flex-column-mobile">
+                    <img src="assets/img/testimonial-slider-asian-dude.png" alt="this should be a persons image">
+                    <div>
+                        <p class="testimonial-text">"Jeez. This got me up and running for a job interview!"</p>
+                        <p><em>Kaneda Yamagata - CTO MeshBash</em></p>
                     </div>
-                    <input class="button margin-top--l" type="submit" value="Send Form!" aria-label="this submits your form data">
-                </form>
+                </div>
             </div>
-        </div>
-        <img class="flip-x divider divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
-    </section>
-    <!--CONTACT SECTION END-->
-</main>
+        </section>
+        <!--TESTIMONIAL SECTION END-->
+
+        <!--CONTACT SECTION START-->
+        <section class="section-full background flex flex-center flex-column flex-between">
+            <img class="divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
+            <div class="container container-mobile flex-column-mobile flex text-center-mobile">
+                <div
+                    class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order-mobile">
+                    <h2><span>GOT</span> questions?</h2>
+                    <p class="margin-top--s">Feel free to contact us at any time! We will come back to you as soon as
+                        possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
+                </div>
+                <div class="column-2 column-2-mobile flex flex-end flex-center-x-mobile">
+                    <form action="https://rebellionwebdesign.github.io/fab-forever/response.html"
+                        class="form-wrapper flex flex-column box-shadow">
+                        <h3>Lets stay in contact!</h3>
+                        <label for="fname">Your first name <span class="red-star">*</span></label>
+                        <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
+                        <label for="lname">Your last name <span class="red-star">*</span></label>
+                        <input type="text" id="lname" name="lname" aria-label="Put your last name in here" required>
+                        <label for="email">Your eMail address <span class="red-star">*</span></label>
+                        <input type="email" id="email" name="email" aria-label="Put your email address in here"
+                            required>
+                        <div class="legal-wrapper">
+                            <p class="legal-text">with <span class="red-star">*</span> marked fields are mandatory</p>
+                            <input type="checkbox" id="newsletter" name="newsletter">
+                            <label class="newsletter" for="newsletter">I also want the newsletter!</label>
+                        </div>
+                        <input class="button margin-top--l" type="submit" value="Send Form!"
+                            aria-label="this submits your form data">
+                    </form>
+                </div>
+            </div>
+            <img class="flip-x divider divider-bottom" src="assets/img/shape-divider-bottom.svg"
+                alt="the bottom shape divider">
+        </section>
+        <!--CONTACT SECTION END-->
+    </main>
     <!--FOOTER START-->
     <footer class="flex flex-center">
-        <div class="container container-mobile">
+        <div class="container container-mobile flex">
             <div class="column-2 column-2-mobile hide-mobile">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p class="footer-text">An educational static website project</p>
             </div>
-            <div class="column-2 column-2-mobile flex flex-row">
+            <div class="column-2 column-2-mobile flex">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram"><img class="social-icon no-margin"
