Add hero-image class to printer image

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="column-2 column-2-mobile flex flex-end">
-                    <img src="assets/img/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
+                    <img class="hero-image" src="assets/img/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
                 </div>
             </div>
         </section>
