--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main>
         <!--HERO SECTION START-->
         <section class="section-full background-mask flex flex-center">
-            <div class="container container-mobile flex flex-center--y flex-column-mobile text-center-mobile">
+            <div class="container container-mobile flex flex-center--y text-center-mobile">
                 <div class="column-2 column-2-mobile">
                     <h1><span>NEW</span> to 3D Printing?</h1>
                     <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
@@ -74,18 +74,18 @@
         <!--HERO SECTION END-->
 
         <!--ABOUT SECTION START-->
-        <section class="section-full background-reverse flex flex-center flex-column flex-between text-center-mobile">
+        <section class="section-full background-reverse flex flex-center flex-column flex-between">
             <img class="flip-x divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-            <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile">
-                <div class="column-2 column-2-mobile flex-column-mobile text-white text-shadow flex-order-mobile">
+            <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile text-center-mobile">
+                <div class="column-2 column-2-mobile text-white text-shadow">
                     <h2><span>3D</span>Printing resources for you!</h2>
                     <p class="margin-top--s">Discover how we can help you with getting on track in your 3D printing
                         journey!
                         We start easy and over time we will get into the nitty gritty stuff. Promised!
                     </p>
                 </div>
-                <div class="column-2 column-2-mobile flex flex-end align-center-mobile">
-                    <div class="grid grid-container grid-container-mobile">
+                <div class="column-2">
+                    <div class="grid grid-container">
                         <div class="grid-card grid-card__background--basics box-shadow">
                             <h3>BASICS</h3>
                         </div>
@@ -108,8 +108,8 @@
 
         <!--TESTIMONIAL SECTION START-->
         <section class="section-half flex flex-center">
-            <div class="container flex container-mobile flex-center flex-column-mobile text-center-mobile">
-                <div class="column-2 column-2-mobile flex-order-mobile">
+            <div class="container flex flex-center flex-row text-center-mobile flex-column-mobile">
+                <div class="column-2 column-mobile flex-order-mobile">
                     <h2 class="text-shadow"><span>HOW</span> we help people</h2>
                 </div>
                 <div
@@ -127,16 +127,16 @@
         <!--CONTACT SECTION START-->
         <section class="section-full background flex flex-center flex-column flex-between">
             <img class="divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-            <div class="container container-mobile flex-column-mobile flex text-center-mobile">
+            <div class="container container-mobile flex-column-mobile flex flex-center text-center-mobile">
                 <div
-                    class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order-mobile">
+                    class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order-mobile margin-bottom--l">
                     <h2><span>GOT</span> questions?</h2>
                     <p class="margin-top--s">Feel free to contact us at any time! We will come back to you as soon as
                         possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
                 </div>
-                <div class="column-2 column-2-mobile flex flex-end flex-center-x-mobile">
+                <div class="column-2 column-2-mobile flex flex-end">
                     <form action="https://rebellionwebdesign.github.io/fab-forever/response.html"
-                        class="form-wrapper flex flex-column box-shadow">
+                        class="form-wrapper flex flex-column box-shadow flex-center">
                         <h3>Lets stay in contact!</h3>
                         <label for="fname">Your first name <span class="red-star">*</span></label>
                         <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
