Remove unneeded class

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main>
         <!--HERO SECTION START-->
         <section class="section-full background-mask flex flex-center">
-            <div class="container container-mobile flex flex-center--y text-center-mobile">
+            <div class="container container-mobile flex flex-center--y">
                 <div class="column-2 column-2-mobile">
                     <h1><span>NEW</span> to 3D Printing?</h1>
                     <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
