--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--RESPONSIVE HEADER START-->
     <header class="headerbar flex flex-center">
         <div class="container container-mobile flex flex-center--y">
-            <div class="column-2 column-2__open--mobile flex flex-between">
+            <div class="column-2 full-row flex flex-between flex-center--y">
                 <a href="https://rebellionwebdesign.github.io/fab-forever"
                     aria-label="the logo sends you back to the homepage">
                     <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg"
