Add responsive classes to XS hero section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <main>
         <!--HERO SECTION START-->
         <section class="section-full background-mask flex flex-center">
-            <div class="container container-mobile flex flex-center--y">
-                <div class="column-2 column-2-mobile">
+            <div class="container container-mobile flex flex-column-reverse-mobile flex-center--y">
+                <div class="column-2 column-2-mobile flex flex-column-mobile text-center-mobile margin-top-l-mobile">
                     <h1><span>NEW</span> to 3D Printing?</h1>
                     <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
                     <div class="button-wrapper">
@@ -66,7 +66,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="column-2 column-2-mobile flex flex-end">
+                <div class="column-2 column-2-mobile flex flex-end flex-center-x-mobile">
                     <img class="hero-image" src="assets/img/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
                 </div>
             </div>
