Fix flex layout on mobile hero section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!--HERO SECTION START-->
         <section class="section-full background-mask flex flex-center">
             <div class="container container-mobile flex flex-column-reverse-mobile flex-center--y">
-                <div class="column-2 column-2-mobile flex flex-column-mobile text-center-mobile margin-top-l-mobile">
+                <div class="column-2 flex flex-column flex-column-mobile text-center-mobile margin-top-l-mobile">
                     <h1><span>NEW</span> to 3D Printing?</h1>
                     <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
                     <div class="button-wrapper">
