--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         We start easy and over time we will get into the nitty gritty stuff. Promised!
                     </p>
                 </div>
-                <div class="column-2">
+                <div class="column-2 column-2-mobile">
                     <div class="grid grid-container">
                         <div class="grid-card grid-card__background--basics box-shadow">
                             <h3>BASICS</h3>
