--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!--HERO SECTION START-->
         <section class="section-full background-mask flex flex-center">
             <div class="container container-mobile flex flex-column-reverse-mobile flex-center--y">
-                <div class="column-2 flex flex-column flex-column-mobile text-center-mobile margin-top-l-mobile">
+                <div class="column-2 column-2-mobile flex flex-column flex-column-mobile text-center-mobile margin-top-l-mobile">
                     <h1><span>NEW</span> to 3D Printing?</h1>
                     <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
                     <div class="button-wrapper">
@@ -107,16 +107,16 @@
         <!--ABOUT SECTION END-->
 
         <!--TESTIMONIAL SECTION START-->
-        <section class="section-half flex flex-center">
+        <section class="section-full flex flex-center">
             <div class="container flex flex-center flex-row text-center-mobile flex-column-mobile">
-                <div class="column-2 column-mobile flex-order-mobile">
+                <div class="column-2 column-2-mobile flex-order-mobile">
                     <h2 class="text-shadow"><span>HOW</span> we help people</h2>
                 </div>
                 <div
                     class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-row flex-column-mobile">
                     <img src="assets/img/testimonial-slider-asian-dude.png" alt="this should be a persons image">
                     <div>
-                        <p class="testimonial-text">"Jeez. This got me up and running for a job interview!"</p>
+                        <p class="testimonial-text margin-top-l-mobile">"Jeez. This got me up and running for a job interview!"</p>
                         <p><em>Kaneda Yamagata - CTO MeshBash</em></p>
                     </div>
                 </div>
@@ -125,9 +125,9 @@
         <!--TESTIMONIAL SECTION END-->
 
         <!--CONTACT SECTION START-->
-        <section class="section-full background flex flex-center flex-column flex-between">
+        <section class="section-full background flex flex-center flex-column flex-between ">
             <img class="divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-            <div class="container container-mobile flex-column-mobile flex flex-center text-center-mobile">
+            <div class="container container-mobile flex-column-mobile flex flex-center text-center-mobile container-padding-mobile">
                 <div
                     class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order-mobile margin-bottom--l">
                     <h2><span>GOT</span> questions?</h2>
