Fix main content

--- a/basics.html
+++ b/basics.html
@@ -53,6 +53,7 @@
     <!--RESPONSIVE HEADER END-->
 
     <!--HEADER SECTION START-->
+    <main>
     <section class="section-half flex flex-center flex-column flex-between background">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container container-mobile flex flex-center text-white text-shadow">
@@ -105,7 +106,7 @@
         </main>
     </div>
     </section>
-    
+</main>
 
     <!--FOOTER START-->
     <footer class="flex flex-center">
