--- a/index.html
+++ b/index.html
@@ -30,20 +30,24 @@
                 <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
                     <ul>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
+                            target="_self" aria-label="this link sends you to the basics page">
+                            <li>HOME</li>
+                        </a>
                         <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
-                            target="_blank" aria-label="this link sends you to the basics page">
+                            target="_self" aria-label="this link sends you to the basics page">
                             <li>BASICS</li>
                         </a>
                         <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
-                            target="_blank" aria-label="this link sends you to the materials page">
+                            target="_self" aria-label="this link sends you to the materials page">
                             <li>MATERIALS</li>
                         </a>
                         <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
-                            target="_blank" aria-label="this link sends you to the models page">
+                            target="_self" aria-label="this link sends you to the models page">
                             <li>MODELS</li>
                         </a>
                         <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
-                            target="_blank" aria-label="this link sends you to the help page">
+                            target="_self" aria-label="this link sends you to the help page">
                             <li>HELP</li>
                         </a>
                     </ul>
