--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <nav>
                     <ul>
                         <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
-                            target="_self" aria-label="this link sends you to the basics page">
+                            target="_self" aria-label="this link sends you to the home page">
                             <li>HOME</li>
                         </a>
                         <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
