--- a/response.html
+++ b/response.html
@@ -16,25 +16,39 @@
 <body>
     <!--RESPONSIVE HEADER START-->
     <header class="headerbar flex flex-center">
-        <div class="container container--mobile flex flex-center--y">
-            <div class="column-2 column-2__open--mobile">
-                <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="the logo sends you back to the homepage">
-                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo">
+        <div class="container container-mobile flex flex-center--y">
+            <div class="column-2 full-row flex flex-between flex-center--y">
+                <a href="https://rebellionwebdesign.github.io/fab-forever"
+                    aria-label="the logo sends you back to the homepage">
+                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg"
+                        alt="the fab forever logo">
                 </a>
                 <img class="mobile--open" src="assets/img/bars-solid.svg" alt="this should be an open icon">
             </div>
             <div class="column-2 column-2__nav--mobile closed flex flex-end">
+                <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
-                    <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be an open icon">
                     <ul>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener" target="_blank"
-                        aria-label="this link sends you to the basics page"><li>BASICS</li></a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener" target="_blank"
-                        aria-label="this link sends you to the materials page"><li>MATERIALS</li></a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener" target="_blank"
-                        aria-label="this link sends you to the models page"><li>MODELS</li></a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener" target="_blank"
-                        aria-label="this link sends you to the help page"><li>HELP</li></a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
+                            target="_self" aria-label="this link sends you to the home page">
+                            <li>HOME</li>
+                        </a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the basics page">
+                            <li>BASICS</li>
+                        </a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the materials page">
+                            <li>MATERIALS</li>
+                        </a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the models page">
+                            <li>MODELS</li>
+                        </a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the help page">
+                            <li>HELP</li>
+                        </a>
                     </ul>
                 </nav>
             </div>
