Fex testimonial section layout

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <!--ABOUT SECTION END-->
 
         <!--TESTIMONIAL SECTION START-->
-        <section class="section-full flex flex-center">
+        <section class="section-half flex flex-center">
             <div class="container flex flex-center flex-row text-center-mobile flex-column-mobile">
                 <div class="column-2 column-2-mobile flex-order-mobile">
                     <h2 class="text-shadow"><span>HOW</span> we help people</h2>
