Fix container paddings on XS

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!--ABOUT SECTION START-->
         <section class="section-full background-reverse flex flex-center flex-column flex-between">
             <img class="flip-x divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-            <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile text-center-mobile">
+            <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile text-center-mobile container-padding-mobile">
                 <div class="column-2 column-2-mobile text-white text-shadow">
                     <h2><span>3D</span>Printing resources for you!</h2>
                     <p class="margin-top--s">Discover how we can help you with getting on track in your 3D printing
@@ -112,7 +112,7 @@
 
         <!--TESTIMONIAL SECTION START-->
         <section class="section-half flex flex-center">
-            <div class="container flex flex-center flex-row text-center-mobile flex-column-mobile">
+            <div class="container flex flex-center flex-row text-center-mobile flex-column-mobile container-padding-mobile">
                 <div class="column-2 column-2-mobile flex-order-mobile">
                     <h2 class="text-shadow"><span>HOW</span> we help people</h2>
                 </div>
